--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,6 +17,10 @@
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
+
 </head>
 <body>
 
@@ -45,7 +49,7 @@
     <nav class="navbar navbar-expand-lg custom-navbar-final shadow-sm">
         <div class="container">
 
-            
+
             <!-- MOBILE: REMOVE TOGGLER -->
             @* <button class="navbar-toggler text-white d-none d-lg-block" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent">
@@ -141,11 +145,7 @@
                             </a>
                         </li>
 
-                        <li class="nav-item nav-item-custom">
-                            <button type="button" class="logout-btn" onclick="confirmLogout()">
-                                <i class="fa-solid fa-right-from-bracket"></i> Logout
-                            </button>
-                        </li>
+
 
 
 
@@ -169,13 +169,7 @@
 
                         <li class="nav-item nav-item-custom">
                             <a class="nav-link nav-link-custom" asp-controller="Admin" asp-action="Members">
-                                <i class="fa-solid fa-users-gear"></i> <span>Members</span>
-                            </a>
-                        </li>
-
-                        <li class="nav-item nav-item-custom">
-                            <a class="nav-link nav-link-custom" asp-controller="Blood" asp-action="Index">
-                                <i class="fa-solid fa-droplet"></i><span>Blood</span>
+                                <i class="fa-solid fa-users-gear"></i><span>Members</span>
                             </a>
                         </li>
 
@@ -217,7 +211,7 @@
 
 
     <!-- Logout Confirmation Popup -->
-    
+
     <script>
         function confirmLogout() {
             Swal.fire({
@@ -265,3 +259,4 @@
 
 </body>
 </html>
+
