--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -168,6 +168,12 @@
                         </li>
 
                         <li class="nav-item nav-item-custom">
+                            <a class="nav-link nav-link-custom" asp-controller="Blood" asp-action="Index">
+                                <i class="fa-solid fa-droplet"></i><span>Blood</span>
+                            </a>
+                        </li>
+
+                        <li class="nav-item nav-item-custom">
                             <a class="nav-link nav-link-custom" asp-controller="Admin" asp-action="Members">
                                 <i class="fa-solid fa-users-gear"></i><span>Members</span>
                             </a>
