--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -151,7 +151,11 @@
                             </a>
                         </li>
 
-
+                        <li class="nav-item nav-item-custom">
+                            <button type="button" class="logout-btn" onclick="confirmLogout()">
+                                <i class="fa-solid fa-right-from-bracket"></i> Logout
+                            </button>
+                        </li>
 
 
 
@@ -422,10 +426,6 @@
             });
         }
     </script>
-
-
-
-
 </body>
 </html>
 
